[package]
name = "keentools-cloud"
version = "0.1.5"
edition = "2021"
description = "Unofficial CLI for the KeenTools Cloud 3D Head Reconstruction API"
license = "MIT"
repository = "https://github.com/loonghao/keentools_cloud_cli"
keywords = ["keentools", "3d", "reconstruction", "cli", "avatar"]
categories = ["command-line-utilities"]

[[bin]]
name = "keentools-cloud"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "gzip"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
anyhow = "1"
thiserror = "1"
indicatif = "0.17"
colored = "2"
futures-util = "0.3"
bytes = "1"
atty = "0.2"
semver = "1"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
strip = true
